# rustdns

./: Cargo.toml  LICENSE.md  README.md  config.conf  config.toml  docker-compose.yml
src/: args.rs  helper.rs  main.rs  parse.rs
src/cache/: def.rs  mod.rs
src/cache/modules/: mod.rs  root.rs  rootserver.rs  tld.rs  zone.rs
src/helpers/: bit.rs  bit_reader.rs  bit_writer.rs  config.rs  iana.rs  mod.rs
src/parser/: def.rs  dns.rs  fqdn.rs  header.rs  mod.rs  opcode.rs  parse.rs  qclass.rs  qtype.rs  question.rs  rcode.rs  resource.rs  type.rs
src/parser/defs/: dns.rs  header.rs  mod.rs  opcode.rs  qclass.rs  qtype.rs  question.rs  rcode.rs  resource.rs  type.rs
src/resolver/: handler.rs  mod.rs  nameresolver.rs  question.rs  transport.rs
